# aurora-dsql-tools

./: .gitignore  CONTRIBUTING.md  README.md  dsql_grammar.ebnf  dsql_grammar.json
.github/workflows/: dsql-cluster-create.yml  dsql-cluster-delete.yml  dsql-lint-ci.yml  dsql-lint-npm-ci.yml  dsql-lint-npm-release.yml  dsql-lint-release.yml  dsql-sqltools-driver-code-check.yml  flyway-ci.yml  flyway-release.yml  (+8 more)
dsql-lint/: Cargo.toml  README.md
dsql-lint/grammar/: MAINTAINERS.md  REFRESH.md
dsql-lint/npm/dsql-lint/: package.json
dsql-lint/npm/dsql-lint-darwin-arm64/: package.json
dsql-lint/npm/dsql-lint-linux-arm64/: package.json
dsql-lint/npm/dsql-lint-linux-x64/: package.json
dsql-lint/nuget/: Amazon.AuroraDsql.Lint.csproj  Program.cs  README.md
dsql-lint/nuget-runtime/: Amazon.AuroraDsql.Lint.Runtime.csproj  DsqlLintResolver.cs  README.md
dsql-lint/nuget-runtime/buildTransitive/: Amazon.AuroraDsql.Lint.Runtime.targets
dsql-lint/nuget-runtime/tests/: Amazon.AuroraDsql.Lint.Runtime.Tests.csproj  DsqlLintResolverTests.cs
dsql-lint/pypi/: README.md  pyproject.toml
dsql-lint/scripts/: grammar_diff.sh  refresh_pg_corpus.sh
dsql-lint/src/: lib.rs  lint.rs  main.rs  mysql.rs
dsql-lint/src/grammar/: mod.rs  model.rs  recognizer.rs  tokenize.rs
dsql-lint/src/rules/: constraint_collapse.rs  errors.rs  identity_idiom.rs  mod.rs  name_match.rs  pk_collapse.rs  serial_idiom.rs  unique_collapse.rs  warnings.rs
dsql-lint/tests/: dsql_cluster_test.rs  exit_code_test.rs  fix_cli_test.rs  fix_test.rs  grammar_corpus_mirror_test.rs  grammar_diff_smoke_test.rs  grammar_oracle.rs  grammar_oracle_test.rs  integration_test.rs  json_output_test.rs  stdin_test.rs
dsql-lint/tests/common/: mod.rs
dsql-lint/tests/fixtures/: clean_all_types.sql  sample_migration.sql
dsql-lint/tests/grammar/: README.md
dsql-lint/tests/grammar/accept/: accept_alter_add_column.sql  accept_alter_table_op.sql  accept_array_type.sql  accept_create_table_as.sql  accept_foreign_key.sql  accept_identity_cache.sql  accept_identity_type.sql  accept_index_async.sql  accept_inherits.sql  accept_json_type.sql  accept_partition_by.sql  accept_sequence.sql  accept_tablespace.sql  accept_temp_table.sql  accept_transaction.sql  accept_truncate.sql  accept_unsupported_statement.sql  smoke__valid_create_table.sql
dsql-lint/tests/grammar/fixed/: foreign_key__column_level.sql  identity_cache__bad_value.sql  identity_cache_missing__no_cache.sql  identity_type__integer.sql  index_async__missing.sql  index_concurrently__basic.sql  index_using__btree.sql  inherits__basic.sql  json_type__jsonb.sql  partition_by__range.sql  sequence_cache__bad_value.sql  sequence_cache_missing__no_cache.sql  sequence_type__integer.sql  smoke__serial_type.sql  tablespace__on_table.sql  temp_table__create_temp.sql  transaction_isolation__serializable.sql
dsql-lint/tests/grammar/reject/: add_column_constraint__not_null.sql  array_type__text_array.sql  create_table_as__select.sql  foreign_key__column_level.sql  identity_cache__bad_value.sql  identity_cache_missing__no_cache.sql  identity_type__integer.sql  index_async__missing.sql  index_concurrently__basic.sql  index_expression__lower.sql  index_partial__where.sql  index_using__btree.sql  inherits__basic.sql  json_type__jsonb.sql  partition_by__range.sql  sequence_cache__bad_value.sql  sequence_cache_missing__no_cache.sql  sequence_type__integer.sql  set_transaction__basic.sql  smoke__serial_type.sql  tablespace__on_table.sql  temp_table__create_temp.sql  transaction_isolation__serializable.sql  truncate__basic.sql  unsupported_alter_table_op__rls.sql  unsupported_statement__create_extension.sql
dsql-lint/tests/grammar_corpus/: mod.rs
dsql-lint/tests/grammar_corpus/in_tree/: SOURCE.md  clean_statements.sql  error_cases.sql  false_positive_cases.sql  source.sql  supported_types.sql
dsql-lint/tests/grammar_corpus/sqlfluff/: SOURCE.md
dsql-lint/tests/grammar_oracle/: drift.rs  ebnf.rs  grammar.rs  mod.rs  pg_corpus.rs  recognizer.rs  snowglobe.rs
dsql-lint/tests/grammar_oracle/pg_corpus/: PG_REF
flyway/: README.md  build.gradle  pom.xml
pgdump-proxy/: README.md  dsql_pgdump_proxy.py
(+18 files in other folders)
